[metadata]
name = amqp-rpc-client
version = 1.2.6a7
author = Jan Eike Suchard
author_email = jan-eike.suchard@magenta.de
description = An asynchronous RPC client for message brokers implementing the AMQPv0-9-1 protocol
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/j-suchard/amqp-rpc-client
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = amqp_rpc_client
python_requires = >=3.6
install_requires =
    pika~=1.2.0
